--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,6 @@
-*{
+html    {
     padding: 0;
-    margin-top: 60px;
+    /* margin-top: 60px; */
     text-decoration: none;
 }
 
@@ -13,6 +13,7 @@ body{
     text-align: center;
     padding: 10px;
     margin: 10px;
+    margin-top: 25vh;
 }
 
 .main input,select{
