--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,4 +1,4 @@
-html    {
+html{
     padding: 0;
     /* margin-top: 60px; */
     text-decoration: none;
@@ -9,14 +9,30 @@ body{
     background-color: #e8e9ed;
 }
 
-.main{
+.main-login{
     text-align: center;
     padding: 10px;
     margin: 10px;
     margin-top: 25vh;
 }
 
-.main input,select{
+.main-gebruiker{
+    text-align: center;
+    padding: 10px;
+    margin: 10px;
+}
+
+.main-gebruiker th, .main-gebruiker tr{
+    border-bottom: solid black;
+}
+
+.main-gebruiker h1, .main-gebruiker table{
+    margin-left: 30%;
+    margin-right: 30%;
+    border-bottom: solid black;
+}
+
+.main-login input,select{
     width: 200px;
     padding: 8px;
     margin: 8px;
@@ -36,4 +52,9 @@ input[type="submit"]{
 
 input[type="submit"]:hover{
     background-color: #5cc7b1;
+}
+
+.ziekeDocentenTabel th{
+    text-align: center;
+    border: solid black;
 }
