--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -27,7 +27,7 @@ body{
     border-radius: 8px;
 }
 
-input[type="submit"]{
+input[type="submit"], #options input[type="submit"] {
     background-color: #19a282;
     width: 220px;
     font-size: 18px;
@@ -35,7 +35,7 @@ input[type="submit"]{
     cursor: pointer;
 }
 
-input[type="submit"]:hover{
+input[type="submit"]:hover, #options input[type="submit"]:hover {
     background-color: #5cc7b1;
 }
 /* Eind login pagina*/
@@ -71,3 +71,28 @@ input[type="submit"]:hover{
     background-color: #dedede;
   }
 /* Eind Gebruiker pagina*/ 
+
+/*---------- beheerderspagina ----------*/
+#tables {
+    grid-column: 1 / 2;
+}
+
+#options {
+    grid-column: 2 / 3;
+    border-left: 0.1rem solid #ccc;
+    padding-left: 2rem;
+}
+
+#options div {
+    margin-left: 8px;
+}
+
+#options input {
+    width: 200px;
+    padding: 8px;
+    margin: 8px;
+    background-color: rgb(245, 245, 245);
+    border: 10px rgb(245, 245, 245);
+    outline: none;
+    border-radius: 8px;
+}
