--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,6 @@
 html{
     padding: 0;
+    /* margin-top: 60px; */
     text-decoration: none;
 }
 
@@ -69,7 +70,7 @@ input[type="submit"]:hover, #options input[type="submit"]:hover {
   .main-gebruiker tr:nth-child(odd) {
     background-color: #dedede;
   }
-/* Eind Gebruiker pagina*/ 
+/* Eind Gebruiker pagina*/
 
 /*---------- beheerderspagina ----------*/
 #tables {
