--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -75,6 +75,7 @@ input[type="submit"]:hover, #options input[type="submit"]:hover {
 /*---------- beheerderspagina ----------*/
 #tables {
     grid-column: 1 / 2;
+    background-color: #19a282;
 }
 
 #options {
